  * halcmd will now show an error message instead of segfaulting when
    inadequate locked memory is available
  * allow emc2-sim to be built on 8.04
  * stepconf: fix "negative SCALE" problem reported by Christopher Purcell
  * comp: fix bad C code generated from variable array declarations such as
    'variable double output[8];'
  * documentation improvments

 -- Jeff Epler <jepler@unpythonic.net>  Tue, 23 Sep 2008 20:21:40 -0500

emc2 (1:2.2.6) hardy; urgency=low

  * fix hal_input manpage
  * Fix FTBFS on hardy (texlive-extra-utils)
  * (incompatible change) make debounce cfg= match the documentation
    If you use a debounce component with multiple groups (e.g., cfg="3 3")
    this must be changed to use commas instead of spaces: (e.g., cfg=3,3)
  * hal_ax5214h: driver fixes from Dave Brink
  * stepconf: fix spurious "application closed unexpectedly" messages
    (for this and other stepconf bugfixes, re-run stepconf and re-save your
    configuration file)
  * stepconf: fix "following error" messages when the requested step rate
    cannot be attained
  * stepconf: fix "following error" messages due to insufficient "stepgen
    headroom"
  * stepconf: if an exception is encountered, show it to the user in a message
    box.
  * stepconf: fix non-working configuration if "Onscreen prompt for tool
    change" was disabled
  * stepconf: allow entry of step and direction timings up to 500000ns
  * hal_ppmc: handle faster clock frequency for UPC 3.1 boards
  * hal_ppmc: correctly return IO regions at exit
  * software encoder counter: fix problem with negative velocity outputs
  * Fix handling of G61/G64 after Machine Off (SF#2006736)
  * new realtime component: gearchange.  selects between two scale factors,
    two min and max speed limits, and optionally reverses direction of spindle
  * new realtime component: invert - outputs the inverse of a float (1/x)
  * new realtime component: ilowpass - scale and low-pass on integer values to